# rust_c_interop

c_call_ffi/: Makefile  asan_c_says_hello  c_says_hello  c_says_hello.c  rust_ffi_lib.h
rust_call_ffi/: Cargo.toml
rust_call_ffi/src/: main.rs
rust_ffi_lib/: Cargo.toml  cbindgen.toml  rust_ffi_lib.h
rust_ffi_lib/src/: ffi_util.rs  lib.rs
